[package]
name = "smartsched_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-absolutize = "3.0.13"
chrono = "0.4.23"
mysql = "23.0.1"
mysql_common = {version = "0.29.2", features = ["chrono"]}
shellexpand = "3.0.0"
